force-app/main/default/objects/Certification__c/fields/Awarding_body__c.field-meta.xml
<CustomField>
    <fullName>Awarding_body__c</fullName>
    <label>Awarding body</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>