force-app/main/default/objects/Certification__c/fields/Discounted_price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_price__c</fullName>
    <formula>Cost__c  -(Cost__c * 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>