force-app/main/default/objects/Certification__c/fields/Expires__c.field-meta.xml
<CustomField>
    <fullName>Expires__c</fullName>
    <label>Expires</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>